cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_171.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/s3_cbc.c:61: error: DEAD_STORE
  The value written to &md_out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/s3_cbc.c:61:5: Write of unused value
59.       l2n(sha1->h2, md_out);
60.       l2n(sha1->h3, md_out);
61.       l2n(sha1->h4, md_out);
          ^
62.   }
63.   
